--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,51 +1,43 @@
-<div class="container-fluid">    
+<div class="container">
     <div class="card">
-        <div class="card-header p-0">
-            <div class="pos-f-t">
-                <div class="collapse" id="navbarToggleExternalContent">
-                    <div class="bg-dark p-4">
-                    <h4 class="text-white">Collapsed content</h4>
-                    <span class="text-muted">Toggleable via the navbar brand.</span>
-                    </div>
-                </div>
-                <nav class="navbar navbar-dark bg-dark">
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="text-white">{{title}}</div>
-                    <!-- <div class="text-white">Vikram</div>
-                    <div class="text-white">Vikram</div>
-                    <div class="text-white">Vikram</div> -->
-                </nav>
-            </div>
+        <div class="card-header">
+            {{title}}
         </div>
-        <div class="card-body p-0">
+        <div class="card-body">
           <!-- <app-home></app-home> -->
           <router-outlet></router-outlet>
           <!-- Routed views go here -->
         </div>
-        <div class="card-footer text-muted bg-dark text-white">
+        <div class="card-footer text-muted">
             Time: {{varTime | date:"MM/dd/yy hh:mm a"}}
         </div>
     </div>
 </div>
 
-<!-- <div class="card">
+<div class="card">
   <div class="card-header">
       Demo & Learning
   </div>
   <div class="card-body">
     <h4 class="card-title">Matches:</h4>
-    <div class="row" *ngFor="let match of matches">
+    <div class="row" *ngFor="let match of fireMatches | async">
       <div class="col-3">
         {{match.id}}
       </div>
-      <div class="col-9">
+      <div class="col-3">
+        {{match | json}}
+      </div>
+    </div>
+    <div class="row" *ngFor="let match of fireSnapShot | async">
+      <div class="col-3">
+        {{match.id}}
+      </div>
+      <div class="col-3">
         {{match | json}}
       </div>
     </div>
   </div>
-</div> -->
+</div>
 
 <!-- <div class="container-fluid">
   <nav class="navbar navbar-expand-sm navbar-light bg-light">
