--- a/src/app/score/score_board/score-board.component.html
+++ b/src/app/score/score_board/score-board.component.html
@@ -1,38 +1,10 @@
-<!-- <div *ngIf="team; else noContentTeam">
-    {{team.shortName}}
-</div>
-<div *ngIf="score; else noContentScore">
-    score exists
-</div> -->
-
-<div *ngIf="team && score; else noContent">
+<div *ngIf="totalScore && teamName">
     <div class="row">
-        <div class="col-6"><span>{{team.shortName}}</span></div>
-        <div class="col-6">{{score.runs + '/' + score.wickets}}</div>
+        <div class="col-6"><span>{{teamName}}</span></div>
+        <div class="col-6">{{totalScore.runs + '/' + totalScore.wickets}}</div>
     </div>
     <div class="row">
         <div class="col-6">Overs:</div>
-        <div class="col-6">{{score.overs + '.' + score.ballsOfCurrentOver}}</div>
+        <div class="col-6">{{totalScore.overs + '.' + totalScore.ballsOfCurrentOver}}</div>
     </div>
 </div>
-<ng-template #noContent>
-    <div class="row">
-        <div class="col">
-            <i class="fas fa-spinner fa-pulse"></i>
-        </div>
-    </div>
-</ng-template>
-<ng-template #noContentScore>
-    <div class="row">
-        <div class="col">
-            score is null
-        </div>
-    </div>
-</ng-template>
-<ng-template #noContentTeam>
-    <div class="row">
-        <div class="col">
-            team is null
-        </div>
-    </div>
-</ng-template>
