--- a/src/app/match/new-match/new-match.component.html
+++ b/src/app/match/new-match/new-match.component.html
@@ -21,7 +21,7 @@
                 <div class="btn btn-success w-100" (click)="submit(true)">Create & Start</div>
             </div>
             <div class="col-4 text-center" >
-                <div class="btn btn-warning w-75" (click)="cancel()">Cancel</div>
+                <div class="btn btn-warning w-75" routerLink="/home" (click)="cancel()">Cancel</div>
             </div>
             <!-- <div class="col-2"></div> -->
             <!-- <div class="col-6"></div> -->
