--- a/src/app/score/score_board/score-board.component.html
+++ b/src/app/score/score_board/score-board.component.html
@@ -8,7 +8,7 @@
 <div *ngIf="team && score; else noContent">
     <div class="row">
         <div class="col-6"><span>{{team.shortName}}</span></div>
-        <div class="col-6">{{score.runs + '/' + score.wickets}}</div>
+        <div class="col-6">{{runs + '/' + score.wickets}}</div>
     </div>
     <div class="row">
         <div class="col-6">Overs:</div>
